Changed from absolute location header to relative. Added assertsions in integration tests.